@@ -1331,6 +1331,9 @@ For Latin Modern the result looks as follows:
     \stoptabulate
 \stop
 
+The keyword \type {norule} will hide the rule with the above variants while
+keeping the rule related spacing.
+
 \subsection {Delimiters: \type{\Uleft}, \prm {Umiddle} and \prm {Uright}}
 
 \topicindex {math+delimiters}
