@@ -1,1 +1,1 @@
-#define luatex_svn_revision 7372
+#define luatex_svn_revision 7373
